--- a/index.html
+++ b/index.html
@@ -2,9 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Duprey Ilona présentation</title>
 </head>
 <body>
-coucou
+<h1><center>DUPREY ILONA</h1>
+<br>
+<h3>Compétences :<br></h3>
+
+<h4><label for="file">Programation:</label>
+    <progress id="file" max="100" value="0"> </progress>
+    <br><br>
+    <label for="graph">Graphisme:</label>
+    <progress id="graph" max="100" value="80">  </progress>
+    <br><br>
+    <label for="orto">Orthographe:</label>
+    <progress id="orto" max="100" value="60"> </progress></h4>
+<br><br>
+Bonjour, je m'appelle Ilona Duprey,<br>J'ai 18 ans et j'ai fais une année de prépa Entertainment à l'ESMA après mon bac.<br>Après une conférence auquel j'ai assisté, j'ai découvert la section Game Design et je me suis rendue compte que cela me correspondait beaucoup plus.
+Depuis ce choix, je suis motivée à me donner à fond pour faire ce que j'aime. Je m'oriente plus vers le graphisme et le digital painting.<br>Mes jeux préférés sont plutôt des RPG ou JRPG. Je privilégie l'histoire au gameplay, j'aime beaucoup découvrir l'univers et la narration d'un jeu.
+<br><br>
+<h4>Mes jeux préférés :</h4>
+1. Persona 5<br>
+2. Angel of Death<br>
+3. Rise of legends
+
 </body>
 </html>
