--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@ Depuis ce choix, je suis motivée à me donner à fond pour faire ce que j'aime.
 2. Angel of Death<br>
 3. Rise of legends
 
+<img src="portrait.jpg" alt="Portrait">
+<img src="dessin.jpg" alt="Dessin">
+
 </body>
 </html>
