--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1><center>DUPREY ILONA</h1>
 <br><br>
-<img src="portrait.jpg" alt="Portrait">
+<img src="portrait.jpg" width="250" height="300" alt="Portrait">
 <br>
 <h3>Compétences :<br></h3>
 
@@ -26,10 +26,9 @@ Depuis ce choix, je suis motivée à me donner à fond pour faire ce que j'aime.
 <h4>Mes jeux préférés :</h4>
 1. Persona 5<br>
 2. Angel of Death<br>
-3. Rise of legends
+3. Rise of legends<br><br>
 
-
-<img src="dessin.jpg" alt="Dessin">
+<img src="dessin.jpg" width="450" height="525" alt="Dessin">
 
 </body>
 </html>
