--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Depuis ce choix, je suis motivée à me donner à fond pour faire ce que j'aime.
 <br><br>
 <h4>Mes jeux préférés :</h4>
 1. Persona 5<br>
-2. Angel of Death<br>
+2. Angels of Death<br>
 3. Rise of legends<br><br>
 
 <img src="dessin.jpg" width="450" height="525" alt="Dessin">
