--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1><center>DUPREY ILONA</h1>
 <br><br>
-<img src="portrait.jpg" width="250" height="300" alt="Portrait">
+<img src="portrait.jpg" width="264" height="348" alt="Portrait">
 <br>
 <h3>Compétences :<br></h3>
 
@@ -28,7 +28,7 @@ Depuis ce choix, je suis motivée à me donner à fond pour faire ce que j'aime.
 2. Angels of Death<br>
 3. Rise of legends<br><br>
 
-<img src="dessin.jpg" width="450" height="525" alt="Dessin">
+<img src="dessin.jpg" width="300 height="128" alt="Dessin">
 
 </body>
 </html>
