--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Depuis ce choix, je suis motivée à me donner à fond pour faire ce que j'aime.
 2. Angels of Death<br>
 3. Rise of legends<br><br>
 
-<img src="dessin.jpg" width="300 height="128" alt="Dessin">
+<img src="dessin.jpg" width="300 height="128 alt="Dessin">
 
 </body>
 </html>
