--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Duprey Ilona présentation</title>
+    <title>Duprey Ilona CV</title>
 </head>
 <body>
 <h1><center>DUPREY ILONA</h1>
