--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <br><br>
 <img src="portrait.jpg" width="264 height="448 alt="Portrait">
 <br>
-<h3>Compétences :<br></h3>
+<h3><p style="color:#4FBBBC";>Compétences :</p></h3>
 
 <h4><label for="file">Programation:</label>
     <progress id="file" max="100" value="0"> </progress>
@@ -23,10 +23,9 @@
 Bonjour, je m'appelle Ilona Duprey,<br>J'ai 18 ans et j'ai fais une année de prépa Entertainment à l'ESMA après mon bac.<br>Après une conférence auquel j'ai assisté, j'ai découvert la section Game Design et je me suis rendue compte que cela me correspondait beaucoup plus.
 Depuis ce choix, je suis motivée à me donner à fond pour faire ce que j'aime. Je m'oriente plus vers le graphisme et le digital painting.<br>Mes jeux préférés sont plutôt des RPG ou JRPG. Je privilégie l'histoire au gameplay, j'aime beaucoup découvrir l'univers et la narration d'un jeu.
 <br><br>
-<h4>Mes jeux préférés :</h4>
-1. Persona 5<br>
-2. Angels of Death<br>
-3. Rise of legends<br><br>
+
+<h4><p style="color:#C70039";>Mes jeux préférés :</p></h4>
+<p style="color:#c2533c" ;>1. Persona 5<br> 2. Angels of Death<br> 3. Rise of legends</p><br><br>
 
 <img src="dessin.jpg" width="300 height="128 alt="Dessin">
 
