--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Depuis ce choix, je suis motivée à me donner à fond pour faire ce que j'aime.
 <h4><p style="color:#C70039";>Mes jeux préférés :</p></h4>
 <p style="color:#c2533c" ;>1. Persona 5<br> 2. Angels of Death<br> 3. Rise of legends</p><br><br>
 
-<img src="dessin.jpg" width="300 height="128 alt="Dessin">
+<a href="https://angelikuto.github.io/cv%22%3EANGEL</a>
 
 </body>
 </html>
